# ReVancedXposed_Spotify

./: .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ghost.cpp  native-hook.cpp  syscall_interceptor.cpp
app/src/main/java/app/revanced/extension/shared/: Logger.java  Utils.java
app/src/main/java/app/revanced/extension/shared/settings/: BaseSettings.kt
app/src/main/java/app/revanced/extension/spotify/misc/: UnlockPremiumPatch.java
app/src/main/java/io/github/chsbuffer/revancedxposed/: BaseHook.kt  ChimeraBridge.kt  ChimeraEngine.kt  FingerprintCompat.kt  Helper.kt  KotlinXposedHelper.kt  MainHook.kt  UnitTestAnnotations.kt
app/src/main/java/io/github/chsbuffer/revancedxposed/spotify/: AdBlockHook.kt  RoundyUIHook.kt  ScreenshotHook.kt  SettingsSheet.kt  SpotifyHook.kt  ThemeHook.kt
app/src/main/java/io/github/chsbuffer/revancedxposed/spotify/misc/: Fingerprints.kt  UnlockPremiumPatch.kt
app/src/main/java/io/github/chsbuffer/revancedxposed/spotify/misc/login/: AuthPrefs.kt  Fingerprints.kt  FixFacebookLoginPatch.kt  ForceIosLoginPatch.kt  Spoof.kt  StealthMode.kt  TokenInjector.kt  WebLoginManager.kt
app/src/main/java/io/github/chsbuffer/revancedxposed/spotify/misc/logout/: LogOutPatch.kt
app/src/main/java/io/github/chsbuffer/revancedxposed/ui/: LoginActivity.kt
app/src/main/res/values/: xp_strings.xml
gradle/: libs.versions.toml
(+8 files in other folders)
